--- a/step04/src/main/resources/application.properties
+++ b/step04/src/main/resources/application.properties
@@ -25,3 +25,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 # mybatis : null parameter 에 대한 jdbcType 설정 
 mybatis.configuration.jdbc-type-for-null=VARCHAR
+
+# mybatis : domain class type-alias 설정 parameterType="Member"
+mybatis.type-aliases-package=com.work.dto
